<resources>
    <string name="app_name">Egalite</string>
    <string name="module">Modules</string>
    <string name="request">Request</string>
    <string name="loading">Loading Please wait...</string>
    <string name="plzwait">Please wait...</string>
    <string name="btnTxt_agenda">Agenda</string>
    <string name="btnTxt_entry">Txn.Entry</string>
    <string name="btnTxt_history">Txn.History</string>
    <string name="btnTxt_customer">Customer</string>
    <string name="column_cname">CustomerName</string>
    <string name="column_acno">Account No</string>
    <string name="narrative">Narrative</string>
    <string name="column_area">Area</string>
    <string name="column_amount">Amount</string>
    <string name="edit_hint">Search here</string>
    <string name="dates_spinner">dates</string>
    <string name="column_cname_ldpi">Name</string>
    <string name="amt_dsb_till_dt">Disbursed till date</string>
    <string name="amt_to_b_dsb">Current Disbursal</string>
    <string name="dsb_amt">Disbursed Amount</string>
    <string name="Home">Home</string>
    <string name="Loan">Loan</string>
    <string name="Ad.repay">Receipt</string>
    <string name="Enrol">Enroll</string>
    <string name="Deposit">Deposit</string>
    <string name="SavingsAccount">Savings Account</string>
    <string name="login">Login</string>
    <string name="userid_signin">User Name</string>
    <string name="password_signin">Password</string>
    <string name="btn_login">Log In</string>
    <string name="bottom_title1">Copyrights © 2014. bfsi software consulting Pvt Ltd,</string>
    <string name="bottom_title2">All Rights Reserved.</string>
    <string name="txv_forgetpass"><u>Forgot Password</u></string>
    <string name="signup">SignUp</string>
    <string name="agentid_register">Agent Id</string>
    <string name="userid">UserId</string>
    <string name="ragistrationkey_redister">Registration key</string>
    <string name="ipaddress_redister">Server Ip</string>
    <string name="btn_register">Sign up</string>
    <string name="customer_column_cname">CustomerName</string>
    <string name="customer_column_phonenumber">Phone number</string>
    <string name="customer_column_city">City</string>
    <string name="MFB00001">Login Error</string>
    <string name="MFB00002">Sync Info</string>
    <string name="MFB00003">Please check internet connection</string>
    <string name="MFB00004">Device Credentials Failed</string>
    <string name="MFB00005">Agent Credentials Failed</string>
    <string name="MFB00006">Please enter your credentials</string>
    <string name="MFB00007">Please enter your UserId</string>
    <string name="MFB00008">Please enter your Password</string>
    <string name="MFB00009">Invalid Mobile Number</string>
    <string name="MFB00010">Invalid Userid or Password</string>
    <string name="MFB000011">Please Sync the Data to make Transcation</string>
    <string name="MFB000012">Your account is Locked, Please check Userid or Password</string>
    <string name="MFB00013">Entry form error</string>
    <string name="MFB00014">Fields should not be empty</string>
    <string name="MFB00015">Amount to be disburse and entry amount should be equal</string>
    <string name="dashboard">DashBoard</string>
    <string name="lastlogin">Last Login</string>
    <string name="welcome">Welcome</string>
    <string name="ccy">Currency</string>
    <string name="openingbal">Opening Balance</string>
    <string name="topup">Top Up</string>
    <string name="topdown">Top Down</string>
    <string name="totaldr">Total DR</string>
    <string name="totalcr">Total CR</string>
    <string name="closingbal">Closing Bal</string>
    <string name="cashlimit">Cash Limit</string>
    <string name="Name">Name</string>
    <string name="LoanAcNo">Account No</string>
    <string name="Location">Location</string>
    <string name="amount">Amount</string>
    <string name="CustId">Customer ID</string>
    <string name="cust_currernt_bal">Current Balance</string>
    <string name="PhNo">Telephone</string>
    <string name="txnid">Txn ID</string>
    <string name="txnamt">Txn Amoumt</string>
    <string name="txndt">Txn Date</string>
    <string name="txnstatus">Txn Status</string>
    <string name="component">Component Name</string>
    <string name="type">Account Type</string>
    <string name="agentbalance">Agent Balance</string>
    <string name="amountpaid">Paid</string>
    <string name="sanction_amt">Sanction Amount</string>
    <string name="amt_paid_till_dt">Amount Paid Till Date</string>
    <string name="select_laon">Select the Loan Account Number</string>
    <string name="amt_due">Amount Due</string>
    <string name="repay_amt">Repayment Amount</string>
    <string name="rpy_narrative">Narrative</string>
    <string name="rpy_frequency">Frequency</string>
    <string name="rpy_tenure">Tenure</string>
    <string name="dob">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="cust_address">Address</string>
    <string name="cust_address1">Address1</string>
    <string name="cust_address2">Address2</string>
    <string name="cust_address3">Address3</string>
    <string name="cust_address4">Address4</string>
    <string name="cust_city">City</string>
    <string name="cust_state">State</string>
    <string name="cust_country">Country</string>
    <string name="cust_category">Category</string>
    <string name="cust_zipcode">Zipcode</string>
    <string name="cust_locationcode">Location Code</string>
    <string name="selected_ac_no">Selected ACNo</string>
    <string name="txn_status">Transaction Status</string>
    <string name="payment_ccy">Payment Currency</string>
    <string name="All">All</string>
    <string name="previoustxn">Previous Transaction</string>
    <string name="hint_enter_amount">amount</string>
    <string name="hint_enter_narrative">enter narrative</string>
    <string name="hint_enter_frequency">enter frequency</string>
    <string name="hint_enter_tenure">enter tenure</string>
    <string name="hint_searchbyname">Search by Name/Acc</string>
    <string name="paid_amt">Amount Paid</string>
    <string name="overdue">Over Due</string>
    <string name="DueTillDate">DueTillDate</string>
    <string name="MFB00016">Payment Done</string>
    <string name="MFB00017">Transaction Success</string>
    <string name="MFB00018">Transaction Failed</string>
    <string name="MFB00019">Transaction Failed. Existingdatetime != CurrentDatetime </string>
    <string name="MFB00020">Please Enter Narrative</string>
    <string name="MFB00021">Please enter Repayment amount</string>
    <string name="MFB00022">Please enter Tenure</string>
    <string name="MFB00023">Please enter frequency</string>
    <string name="MFB00024">Repayment Amount Should not be zero</string>
    <string name="MFB00025">Repayment Amount should not be greater than Amount to be Paid.</string>
    <string name="MFB00026">No details found</string>
    <string name="MFB00027">System date is not equals to current date</string>
    <string name="MFB00028">Please fill the mandatory fileds</string>
    <string name="MFB00029">Disbursment Completed</string>
    <string name="MFB00030">No Enough Funds</string>
    <string name="MFB00031">Disbursement Cannot Be Proccessed</string>
    <string name="MFB00032">Selected Account did not meet the criteria</string>
    <string name="MFB00033">Customer Enrolled Successfully</string>
     <string name="MFB00034">Please enter Interate rate</string>
   <string name="MFB00035">Input amount should be same as installment amount</string>
   <string name="MFB00036">Insuffient Agent Balance. Please try again later !</string>
     <string name="errorTenure">Tenure should not be zero</string>
    <string name="errorFrequency">Frequency should not be zero</string>
    <string name="errorIntRate">Interate rate should not be zero</string>
    <string name="errortenurevalidate">Tenure should not be greater than 366</string>
    <string name="please_wait">Please wait</string>
    <string name="setting_tiltle">Settings</string>
    <string name="selectLang">Language (Select Application Language)</string>
    <string name="selectTheme">Theme (Select Application Theme)</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="changepass">Change Password</string>
    <string name="about">About bfsi</string>
    <string name="sync">Sync</string>
    <string name="language_eng">English</string>
    <string name="language_hindi">Hindi</string>
    <string name="language_bengali">Bengali</string>
    <string name="language_khmer">Khmer</string>
    <string name="language_tagalog">Tagalog</string>
    <string name="language_swahili">Swahili</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="changepassword">Change Password</string>
    <string name="debugmode">Debug Mode</string>
    <string name="onlinesync">Online Sync</string>
    <string name="setcashpostion">Set Cash Position</string>
    <string name="aboutus"> About bfsi</string>
    <string name="logout">Logout</string>
    <string name="CashPosition">Cash Position</string>
    <string name="Date">Date</string>
    <string name="baudrate">Baud Rate</string>
    <string name="baud9600">9600</string>
    <string name="baud115200">115200</string>
    <string name="exit_title">Egalite Mobile App</string>
    <string name="exit">Do you want to exit?</string>
    <string name="logouts">Please re-launch the application to reset the data</string>
    <string name="title_changepass">Change Password</string>
    <string name="ent_oldpass">Enter Old Password</string>
    <string name="ent_newpass">Enter New Password</string>
    <string name="ent_cnfmpass">Enter Confirm Password</string>
    <string name="submit_changepass">Submit</string>
    <string name="cancel_changepass">Cancel</string>
    <string name="setting_error">Settings Error</string>
    <string name="oldpassword">Please Enter OldPassword</string>
    <string name="oldpasswordcurr">Please Enter Correct Old Password</string>
    <string name="newpassword">Please Enter NewPassword</string>
    <string name="cnfermpassword">Please Enter ConfirmPassword</string>
    <string name="passnotmatch">New password and confirm password are not same</string>
    <string name="passwordchek">Old password and New password are same</string>
    <string name="title_forget">Forgot Password</string>
    <string name="ent_agentid">Enter AgentId</string>
    <string name="ent_registrationkey">Enter Registration Key</string>
    <string name="submit_forgetpass">Submit</string>
    <string name="cancel_forgetpass">Cancel</string>
    <string name="messg_agentid">Please Enter AgentId</string>
    <string name="messg_registerkey">Please Enter Registration Key</string>
    <string name="error">Error</string>
    <string name="ArrayIndexOutOfBoundsException">ArrayIndexOutOfBoundsException</string>
    <string name="ClassNotFoundException">ClassNotFoundException</string>
    <string name="IndexOutOfBoundsException">IndexOutOfBoundsException</string>
    <string name="NullPointerException">NullPointerException</string>
    <string name="NumberFormatException">NumberFormatException</string>
    <string name="RuntimeException">RuntimeException</string>
    <string name="Exception">Exception</string>
    <string name="error_close">error_close</string>
    <string name="set_title">Set Password</string>
    <string name="set_password">Password</string>
    <string name="set_cnf_password">Confirm Password</string>
    <string name="set_ok">Ok</string>
    <string name="messg_set_password">Please Enter Password</string>
    <string name="messg_set_cnfmpassword">Please Enter Confirm Password</string>
    <string name="enrollid">Enrollment ID</string>
    <string name="contactnumber">Contact No</string>
</resources>