<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edt_setting_changpass_lay_oldpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/ent_oldpass"
                android:inputType="textPassword"
                android:singleLine="true" >
            </EditText>

            <EditText
                android:id="@+id/edt_setting_changpass_lay_newpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/ent_newpass"
                android:inputType="textPassword"
                android:singleLine="true" >
            </EditText>

            <EditText
                android:id="@+id/edt_setting_changpass_lay_cnfmpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/ent_cnfmpass"
                android:inputType="textPassword"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/btn_setting_chngpass_lay_submit"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:text="@string/submit_changepass"
                android:textAppearance="@style/text_Large"
                android:textColor="@color/black" >
            </Button>

            <Button
                android:id="@+id/btn_setting_chngpass_lay_cancel"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_changepass"
                android:textAppearance="@style/text_Large"
                android:textColor="@color/black" >
            </Button>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>