<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding" >

    <RelativeLayout
        android:id="@+id/linlay_repay_customer"
        style="?bordereffect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/layout_padding" >

        <EditText
            android:id="@+id/edt_repay_customer_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/searchimg"
            android:ems="10"
            android:hint="@string/edit_hint"
            android:paddingLeft="5dp"
            android:textAppearance="@style/text_Medium" >
        </EditText>
    </RelativeLayout>

    <LinearLayout
        style="?bordereffect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linlay_repay_customer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/lay_between_padding"
        android:orientation="vertical"
        android:padding="1dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linlay_repay_customer_name"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <com.bfsi.egalite.support.MyTextView
                    android:id="@+id/txv_repay_customer_name"
                    style="?textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/Name"
                    android:textAppearance="@style/text_Small"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_repay_customer_namearrow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:src="@drawable/arrowdown"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                style="?view"
                android:layout_width="1dp"
                android:layout_height="40dp" />

            <LinearLayout
                android:id="@+id/linlay_repay_customer_custid"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <com.bfsi.egalite.support.MyTextView
                    android:id="@+id/txv_repay_customer_custid"
                    style="?textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/CustId"
                    android:textAppearance="@style/text_Small"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_repay_customer_custidarrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrowdown" />
            </LinearLayout>

            <View
                style="?view"
                android:layout_width="1dp"
                android:layout_height="40dp" />

            <LinearLayout
                android:id="@+id/linlay_repay_customer_phoneno"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <com.bfsi.egalite.support.MyTextView
                    android:id="@+id/txv_repay_customer_phoneno"
                    style="?textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/PhNo"
                    android:textAppearance="@style/text_Small"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_repay_customer_phonenoarrow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrowdown"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view"
            style="?view"
            android:layout_width="fill_parent"
            android:layout_height="1dp" />
        
       

        <ListView
            android:id="@+id/list_repay_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:scrollbars="none" >
        </ListView>
        
        
        
    </LinearLayout>

</RelativeLayout>